--- a/Thieflike.cabal
+++ b/Thieflike.cabal
@@ -4,18 +4,18 @@
 name:                Thieflike
 version:             0.1.0.0
 synopsis:            A minimal roguelike written for learning and fun!
---description:         
+description:         Move a Hero in a Dungeon, get those Treasures and slay those Villians.
 license:             BSD3
 license-file:        LICENSE
 author:              Justin Hamilton
 maintainer:          justin@jamiltron.com
--- copyright:           
 category:            Game
 build-type:          Simple
 cabal-version:       >=1.8
 
 executable Thieflike
-  main-is:             src/Main.hs
-  -- other-modules:       
+  main-is:             Main.hs
+  hs-source-dirs:      src
+  include-dirs:        src/
   build-depends:       base ==4.5.*,
                        ansi-terminal >= 0.5.0
