--- a/Thieflike.cabal
+++ b/Thieflike.cabal
@@ -17,5 +17,5 @@ executable Thieflike
   main-is:             Main.hs
   hs-source-dirs:      src
   include-dirs:        src/
-  build-depends:       base ==4.5.*,
+  build-depends:       base >= 4.0,
                        ansi-terminal >= 0.5.0
