Getting closer to what I want for post2, need to clean up some more stuff, make explicit redraw-dirty-coord type of function, build the level in world more progmatically, and restrict movement to walls.

--- a/Thieflike.cabal
+++ b/Thieflike.cabal
@@ -17,7 +17,8 @@ executable Thieflike
   main-is:             Main.hs
   hs-source-dirs:      src
   include-dirs:        src/
-  other-modules:       Types
+  other-modules:       Graphics Level Types
   build-depends:       ansi-terminal >= 0.5.0,
                        array >= 0.4.0.0,
-                       base >= 4.0
+                       base >= 4.0,
+                       containers >= 0.4.0.0
