--- a/Thieflike.cabal
+++ b/Thieflike.cabal
@@ -17,7 +17,7 @@ executable Thieflike
   main-is:             Main.hs
   hs-source-dirs:      src
   include-dirs:        src/
-  other-modules:       Graphics Level Types
+  other-modules:       Console Level Types
   build-depends:       ansi-terminal >= 0.5.0,
                        array >= 0.4.0.0,
                        base >= 4.0,
