--- a/Thieflike.cabal
+++ b/Thieflike.cabal
@@ -21,4 +21,5 @@ executable Thieflike
   build-depends:       ansi-terminal >= 0.5.0,
                        array >= 0.4.0.0,
                        base >= 4.0,
-                       containers >= 0.4.0.0
+                       containers >= 0.4.0.0,
+                       data-lens >= 2.0.2
